feat: add delete endpoint for each entity
